# executorch

./: CMakeLists.txt  Package.swift  README.md  install_requirements.py
.ci/docker/ci_commit_pins/: pytorch.txt
.github/workflows/: pull.yml  trunk.yml
backends/arm/_passes/: arm_pass_manager.py
backends/arm/test/: targets.bzl
backends/arm/test/ops/: test_mul.py
backends/vulkan/: utils.py
backends/vulkan/cmake/: ShaderLibrary.cmake
backends/vulkan/runtime/: VulkanBackend.cpp
backends/vulkan/runtime/api/containers/: Tensor.cpp  Tensor.h
backends/vulkan/runtime/graph/ops/glsl/: indexing.glslh
backends/vulkan/runtime/graph/ops/impl/: Staging.cpp
backends/vulkan/test/op_tests/: cases.py
desktop/: CMakeLists.txt
desktop/runtime/: module.h  module_shim.h  runner.cpp
desktop/runtime/full/: main.cpp
desktop/runtime/limited/: module_shim_impl.cpp  shim_tensor_impl.cpp
kernels/quantized/: CMakeLists.txt
